--- a/book.toml
+++ b/book.toml
@@ -1,7 +1,7 @@
 [book]
 title = "study.houdini"
 description = "study.houdini"
-language = "kr"
+language = "ko"
 multilingual = false
 src = "src"
 
